clusters/camillou-cluster/system/ingress/ingress-duplicati.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: duplicati-ingress
  labels:
    name: duplicati-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-basic-auth@kubernetescrd,default-redirect-to-https@kubernetescrd
    cert-manager.io/cluster-issuer: letsencrypt-production

spec:
  rules:
    - host: duplicati.gravi.best
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: duplicati
                port:
                  number: 8200
  tls:
    - hosts:
        - duplicati.gravi.best
      secretName: duplicati-ingress-cert
