clusters/camillou-cluster/system/ingress/ingress-syncthing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: syncthing-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: sync.gravi.best
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing-ui
                port:
                  name: http
  tls:
    - hosts:
        - sync.gravi.best
      secretName: syncthing-ingress-cert
